--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=8196044915:AAGSHGk9cNrJlkrb4VHe3HDfM4t__9Ry5BA
+BOT_TOKEN=
 PROXY_URL=       # Оставьте пустым, если не используете прокси
-OLLAMA_MODEL=bambucha/saiga-llama3
+OLLAMA_MODEL=
